[gd_scene load_steps=6 format=3 uid="uid://p3ijv0nq3035"]

[ext_resource type="Script" path="res://scenes/menu/HUD.gd" id="1_ldp5k"]
[ext_resource type="Texture2D" uid="uid://cq3yp3qmnhg2v" path="res://assets/stop_time_powerup_icon.png" id="2_vgwca"]
[ext_resource type="Texture2D" uid="uid://ddkwkn3fyh6qq" path="res://assets/screen_blast_powerup_icon.png" id="3_ytqdl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_co5na"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_q362x"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_ldp5k")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimerLabel" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 73.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 35
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 2

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -576.0
offset_top = -88.0
offset_right = 576.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_co5na")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer"]
layout_direction = 3
layout_mode = 2

[node name="SlowTimeButton" type="Button" parent="Control/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "1"
icon = ExtResource("2_vgwca")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="ScreenBlastButton" type="Button" parent="Control/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("3_ytqdl")
expand_icon = true

[node name="HealButton" type="Button" parent="Control/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
icon = SubResource("PlaceholderTexture2D_q362x")
expand_icon = true

[node name="SpacerControl" type="Control" parent="Control/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 9.28

[connection signal="pressed" from="Control/PanelContainer/HBoxContainer/SlowTimeButton" to="." method="_on_slow_time_button_pressed"]
[connection signal="pressed" from="Control/PanelContainer/HBoxContainer/ScreenBlastButton" to="." method="_on_screen_blast_button_pressed"]
[connection signal="pressed" from="Control/PanelContainer/HBoxContainer/HealButton" to="." method="_on_heal_button_pressed"]
